# yili-ai-learn

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements.txt  setup.py  setup_dev.py
tests/: __init__.py  test_milvus_demo.py
向量数据库/: __init__.py
向量数据库/milvus/: 01milvus介绍.md  02本地milvus的简单使用.md  03Zilliz Cloud云端向量数据库.md  03Zilliz Cloud云端向量数据库实战.md  __init__.py
向量数据库/milvus/demo/: __init__.py
向量数据库/milvus/demo/02demo/: 01_basic_usage.py  02_advanced_features.py  03_langchain_integration.py  README.md  TUTORIAL_MAPPING.md  __init__.py  run_all_demos.py
向量数据库/milvus/demo/02demo/practice/: 01localMilvus.py
向量数据库/milvus/demo/03zilliz_cloud_demo/: README.md  config.ini  hello_zilliz_rest.py  hello_zilliz_vectordb.py  requirements.txt
向量数据库/milvus/demo/03zilliz_cloud_demo/config/: __init__.py  connection.py  settings.py
